--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -1,6 +1,9 @@
 PORT=4000
 MONGO_URL='mongodb://localhost:27017/Ecommerce'
 JWT_SECRET="customtokengenerateidforsocialmernapp"
+JWT_EXPIRE=5d
+
+# for email
 
 SMTP_SERVICE: "gmail"
 SMTP_HOST="smtp.gmail.com"
