Login and logout method

--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -2,6 +2,7 @@ PORT=4000
 MONGO_URL='mongodb://localhost:27017/Ecommerce'
 JWT_SECRET="customtokengenerateidforsocialmernapp"
 JWT_EXPIRE=5d
+COOKIE_EXPIRE=5
 
 # for email
 
