forgot password with nodemailer

--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -9,5 +9,5 @@ COOKIE_EXPIRE=5
 SMTP_SERVICE: "gmail"
 SMTP_HOST="smtp.gmail.com"
 SMTP_PORT=465,
-SMTP_EMAIL="quickstoreshop.bd@gmail.com"
+SMTP_MAIL="quickstoreshop.bd@gmail.com"
 SMTP_PASSWORD="H4Ubuzf5DeheSHx"
