added cloudinary for images

--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -11,3 +11,8 @@ SMTP_HOST="smtp.gmail.com"
 SMTP_PORT=465,
 SMTP_MAIL="quickstoreshop.bd@gmail.com"
 SMTP_PASSWORD="H4Ubuzf5DeheSHx"
+
+#for cloudinary
+CLOUDINARY_NAME="personal-project-local"
+CLOUDINARY_API_KEY="942569982141472"
+CLOUDINARY_API_SECRET="lMj0l62cjZdacjf2OGJYv7r5C04"
